--- a/templates/base.html
+++ b/templates/base.html
@@ -70,9 +70,6 @@
       <div class="collapse navbar-collapse pt-2 py-md-0" id="bdNavbar">
         <ul class="navbar-nav flex-grow-1">
           <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
-          <li class="nav-item"><a class="nav-link" href="#privacy">Privacy</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         </ul>
       </div>
     </nav>
@@ -81,7 +78,7 @@
   <main class="flex-shrink-0" style="padding-top: 80px;">
     {% block content %}{% endblock %}
 
-    <!-- Features -->
+    <!-- Features 
     <section id="features" class="py-5">
       <div class="container px-4 px-md-3">
         <div class="row align-items-center">
@@ -103,7 +100,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Crops List -->
     <section id="crops-list" class="py-5">
