--- a/templates/condition.html
+++ b/templates/condition.html
@@ -93,10 +93,11 @@
 
         <!-- Predict Now Button -->
         <div>
-          <button class="predict-btn" type="submit" id="submit" onclick="return submit_form();">
+          <button class="bg-green-700 text-white font-bold py-3 px-6 text-lg rounded-lg hover:bg-green-800 transition" type="submit" id="submit" onclick="return submit_form();">
             Predict Now
           </button>        
         </div>
+        
 
       </form>
 
