--- a/templates/condition.html
+++ b/templates/condition.html
@@ -92,11 +92,13 @@
         </div>
 
         <!-- Predict Now Button -->
+        <!-- Predict Now Button -->
         <div>
-          <button class="bg-green-700 text-white font-bold py-3 px-6 text-lg rounded-lg hover:bg-green-800 transition" type="submit" id="submit" onclick="return submit_form();">
-            Predict Now
+          <button class="bg-[#216b39] hover:bg-[#1b5a30] text-white font-semibold text-xl px-7 py-3 rounded-xl transition duration-300 shadow-md" type="submit" id="submit" onclick="return submit_form();">
+           Predict Now
           </button>        
         </div>
+
         
 
       </form>
