--- a/static/main.css
+++ b/static/main.css
@@ -85,8 +85,8 @@ html, body {
   
   /* Brown Text */
   .brown-text {
-    color: #4e260d;
-  }
+    color: #216b39;
+  }  
   
   main {
     flex: 1 0 auto;
