--- a/templates/condition.html
+++ b/templates/condition.html
@@ -53,7 +53,7 @@
     <!-- Upload Section -->
     <div class="col justify-content-center pt-4">
       <h1 class="mb-3 text-4xl font-bold leading-tight tracking-wide main-heading">
-        Get Instant & Accurate Crop Disease Detection with Green Glow
+        Get Instant & Accurate Crop Disease Detection with Ghiras
       </h1>
 
       <!-- Choose Files Button -->
