--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
       color: #216b39;
     }
     .brown-text {
-      color: #4e260d;
-    }
+    color: #216b39;
+    }  
     .custom-bg-color {
       background-color: white;
     }
