--- a/templates/condition.html
+++ b/templates/condition.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} 
-{% block title %} Green Glow: Get Instant & Accurate Crop Disease Detection {% endblock %}
+{% block title %} Ghiras {% endblock %}
 {% block content %}
 
 <style>
