--- a/templates/show_prediction.html
+++ b/templates/show_prediction.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Green Glow: Your Prediction and Possible Cure {% endblock %}
+{% block title %} Ghiras: Your Prediction and Possible Cure {% endblock %}
 {% block content %}
 
 <style>
